--- a/.github/workflows/hansa.yml
+++ b/.github/workflows/hansa.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      isi: ${{ secrets.HEMMELIG }}
     steps:
     - run: |
-        echo $(isi)
+        echo ${{ secrets.HEMMELIG }}
